// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TopAppBar > should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: var(--ictinus-color-background-default);
  height: 3.875rem;
  padding: 0 var(--ictinus-spacing-6);
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-0>*:not(:last-of-type) {
  color: var(--ictinus-color-background-inverted);
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  cursor: pointer;
  margin: var(--ictinus-spacing-8) 0px var(--ictinus-spacing-8) var(--ictinus-spacing-3);
}

.emotion-3 {
  width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4 path,
.emotion-4 rect {
  fill: #175bf5!important;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: var(--ictinus-spacing-6) var(--ictinus-spacing-8) var(--ictinus-spacing-6) var(--ictinus-spacing-6);
  border-radius: var(--ictinus-spacing-3);
  max-width: 25rem;
}

.emotion-6 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 var(--ictinus-spacing-6);
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-10 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: var(--ictinus-spacing-4);
  color: var(--ictinus-color-text-default-active);
  height: var(--ictinus-sizing-9);
  background-color: var(--ictinus-color-palette-tertiary-base);
  padding: var(--ictinus-spacing-0) var(--ictinus-spacing-6) var(--ictinus-spacing-0) var(--ictinus-spacing-6);
  border-radius: var(--ictinus-border-radius-2);
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  background-color: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-10:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-10:hover:not(:disabled) {
  background-color: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-10:active:not(:disabled),
.emotion-10[aria-expanded="true"] {
  background-color: var(--ictinus-color-palette-tertiary-contrast);
}

.emotion-11 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: var(--ictinus-sizing-5);
  height: var(--ictinus-sizing-5);
  border-radius: var(--ictinus-border-radius-7);
  border: var(--ictinus-border-width-1) solid;
  border-color: var(--ictinus-color-palette-primary-alt-contrast);
  box-sizing: border-box;
  background-color: var(--ictinus-color-palette-primary-alt-base);
  color: var(--ictinus-color-text-default-active);
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: var(--ictinus-weight-medium);
  font-size: var(--ictinus-font-size-1);
  line-height: var(--ictinus-line-height-1);
  letter-spacing: var(--ictinus-letter-spacing-1);
}

.emotion-11 img {
  border-radius: var(--ictinus-border-radius-7);
  width: 100%;
  height: 100%;
}

<div>
  <div
    aria-label="Top Application Banner"
    class="emotion-0"
    role="banner"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        data-testid="menu-handler"
      >
        <div
          class="emotion-3"
          data-slot="icon"
        >
          <svg
            class="emotion-4"
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.93223 16C2.67568 16 2.45617 15.8979 2.27371 15.6937C2.09124 15.4895 2 15.2439 2 14.9568C2 14.6697 2.09124 14.4241 2.27371 14.2202C2.45617 14.0162 2.67568 13.9142 2.93223 13.9142H17.0678C17.3243 13.9142 17.5438 14.0163 17.7263 14.2205C17.9088 14.4247 18 14.6703 18 14.9574C18 15.2445 17.9088 15.49 17.7263 15.694C17.5438 15.898 17.3243 16 17.0678 16H2.93223ZM2.93223 11.0186C2.67568 11.0186 2.45617 10.9165 2.27371 10.7124C2.09124 10.5082 2 10.2625 2 9.97543C2 9.68833 2.09124 9.44279 2.27371 9.23882C2.45617 9.03484 2.67568 8.93286 2.93223 8.93286H17.0678C17.3243 8.93286 17.5438 9.03495 17.7263 9.23913C17.9088 9.44333 18 9.68898 18 9.97606C18 10.2632 17.9088 10.5087 17.7263 10.7127C17.5438 10.9166 17.3243 11.0186 17.0678 11.0186H2.93223ZM2.93223 6.0858C2.67568 6.0858 2.45617 5.9837 2.27371 5.7795C2.09124 5.57532 2 5.32967 2 5.04257C2 4.75549 2.09124 4.50996 2.27371 4.30599C2.45617 4.10199 2.67568 4 2.93223 4H17.0678C17.3243 4 17.5438 4.1021 17.7263 4.3063C17.9088 4.5105 18 4.75614 18 5.04323C18 5.33033 17.9088 5.57587 17.7263 5.77984C17.5438 5.98381 17.3243 6.0858 17.0678 6.0858H2.93223Z"
              fill="#6265AD"
            />
          </svg>
        </div>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <strong>
            LOGO
          </strong>
          PLACEHOLDER
        </div>
      </div>
    </div>
    <div
      class="emotion-7"
    />
    <div
      class="emotion-8"
    >
      <div
        class="emotion-9"
      >
        <button
          aria-haspopup="true"
          aria-label="Menu"
          class="emotion-10"
          data-slot="button"
          data-testid="button-userMenu"
          type="button"
        >
          <div
            class="emotion-11"
            data-testid="_avatar"
          >
            <img
              src="https://mui.com/static/images/avatar/1.jpg"
            />
          </div>
          <span
            class="Text__t6529w6"
            data-ictinus="test-version"
          >
            Tom Cruise
          </span>
          <svg
            class="properties_color_active_base__146hxcf23a properties_height_5_base__146hxcf74 properties_width_5_base__146hxcf4c"
            data-ictinus="test-version"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.29797 8.64196L9.25345 12.6836C9.36392 12.7965 9.48388 12.8774 9.61333 12.9265C9.74278 12.9755 9.87167 13 10 13C10.1339 13 10.2642 12.9755 10.3908 12.9265C10.5175 12.8774 10.6361 12.7965 10.7466 12.6836L14.702 8.64196C14.9007 8.439 15 8.21608 15 7.97322C15 7.73035 14.9007 7.50744 14.702 7.30448C14.5034 7.1015 14.2852 7.00002 14.0475 7.00002C13.8099 7.00002 13.5917 7.1015 13.3931 7.30448L10 10.7714L6.60694 7.30448C6.40831 7.1015 6.19014 7.00002 5.95246 7.00002C5.71477 7.00002 5.49661 7.1015 5.29797 7.30448C5.09932 7.50744 5 7.73035 5 7.97322C5 8.21608 5.09932 8.439 5.29797 8.64196Z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopAppBar > should render correctly on dark 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: var(--ictinus-color-background-inverted);
  height: 3.875rem;
  padding: 0 var(--ictinus-spacing-6);
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-0>*:not(:last-of-type) {
  color: var(--ictinus-color-background-default);
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  cursor: pointer;
  margin: var(--ictinus-spacing-8) 0px var(--ictinus-spacing-8) var(--ictinus-spacing-3);
}

.emotion-3 {
  width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4 path,
.emotion-4 rect {
  fill: #175bf5!important;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: var(--ictinus-spacing-6) var(--ictinus-spacing-8) var(--ictinus-spacing-6) var(--ictinus-spacing-6);
  border-radius: var(--ictinus-spacing-3);
  max-width: 25rem;
}

.emotion-6 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 var(--ictinus-spacing-6);
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-10 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: var(--ictinus-spacing-4);
  color: var(--ictinus-color-text-default-active);
  height: var(--ictinus-sizing-9);
  background-color: var(--ictinus-color-palette-tertiary-base);
  padding: var(--ictinus-spacing-0) var(--ictinus-spacing-6) var(--ictinus-spacing-0) var(--ictinus-spacing-6);
  border-radius: var(--ictinus-border-radius-2);
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  background-color: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-10:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-10:hover:not(:disabled) {
  background-color: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-10:active:not(:disabled),
.emotion-10[aria-expanded="true"] {
  background-color: var(--ictinus-color-palette-tertiary-contrast);
}

.emotion-11 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: var(--ictinus-sizing-5);
  height: var(--ictinus-sizing-5);
  border-radius: var(--ictinus-border-radius-7);
  border: var(--ictinus-border-width-1) solid;
  border-color: var(--ictinus-color-palette-primary-alt-contrast);
  box-sizing: border-box;
  background-color: var(--ictinus-color-palette-primary-alt-base);
  color: var(--ictinus-color-text-default-active);
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: var(--ictinus-weight-medium);
  font-size: var(--ictinus-font-size-1);
  line-height: var(--ictinus-line-height-1);
  letter-spacing: var(--ictinus-letter-spacing-1);
}

.emotion-11 img {
  border-radius: var(--ictinus-border-radius-7);
  width: 100%;
  height: 100%;
}

<div>
  <div
    aria-label="Top Application Banner"
    class="emotion-0"
    role="banner"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        data-testid="menu-handler"
      >
        <div
          class="emotion-3"
          data-slot="icon"
        >
          <svg
            class="emotion-4"
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.93223 16C2.67568 16 2.45617 15.8979 2.27371 15.6937C2.09124 15.4895 2 15.2439 2 14.9568C2 14.6697 2.09124 14.4241 2.27371 14.2202C2.45617 14.0162 2.67568 13.9142 2.93223 13.9142H17.0678C17.3243 13.9142 17.5438 14.0163 17.7263 14.2205C17.9088 14.4247 18 14.6703 18 14.9574C18 15.2445 17.9088 15.49 17.7263 15.694C17.5438 15.898 17.3243 16 17.0678 16H2.93223ZM2.93223 11.0186C2.67568 11.0186 2.45617 10.9165 2.27371 10.7124C2.09124 10.5082 2 10.2625 2 9.97543C2 9.68833 2.09124 9.44279 2.27371 9.23882C2.45617 9.03484 2.67568 8.93286 2.93223 8.93286H17.0678C17.3243 8.93286 17.5438 9.03495 17.7263 9.23913C17.9088 9.44333 18 9.68898 18 9.97606C18 10.2632 17.9088 10.5087 17.7263 10.7127C17.5438 10.9166 17.3243 11.0186 17.0678 11.0186H2.93223ZM2.93223 6.0858C2.67568 6.0858 2.45617 5.9837 2.27371 5.7795C2.09124 5.57532 2 5.32967 2 5.04257C2 4.75549 2.09124 4.50996 2.27371 4.30599C2.45617 4.10199 2.67568 4 2.93223 4H17.0678C17.3243 4 17.5438 4.1021 17.7263 4.3063C17.9088 4.5105 18 4.75614 18 5.04323C18 5.33033 17.9088 5.57587 17.7263 5.77984C17.5438 5.98381 17.3243 6.0858 17.0678 6.0858H2.93223Z"
              fill="#6265AD"
            />
          </svg>
        </div>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <strong>
            LOGO
          </strong>
          PLACEHOLDER
        </div>
      </div>
    </div>
    <div
      class="emotion-7"
    />
    <div
      class="emotion-8"
    >
      <div
        class="emotion-9"
      >
        <button
          aria-haspopup="true"
          aria-label="Menu"
          class="emotion-10"
          data-slot="button"
          data-testid="button-userMenu"
          type="button"
        >
          <div
            class="emotion-11"
            data-testid="_avatar"
          >
            <img
              src="https://mui.com/static/images/avatar/1.jpg"
            />
          </div>
          <span
            class="Text__t6529w6"
            data-ictinus="test-version"
          >
            Tom Cruise
          </span>
          <svg
            class="properties_color_active_base__146hxcf23a properties_height_5_base__146hxcf74 properties_width_5_base__146hxcf4c"
            data-ictinus="test-version"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.29797 8.64196L9.25345 12.6836C9.36392 12.7965 9.48388 12.8774 9.61333 12.9265C9.74278 12.9755 9.87167 13 10 13C10.1339 13 10.2642 12.9755 10.3908 12.9265C10.5175 12.8774 10.6361 12.7965 10.7466 12.6836L14.702 8.64196C14.9007 8.439 15 8.21608 15 7.97322C15 7.73035 14.9007 7.50744 14.702 7.30448C14.5034 7.1015 14.2852 7.00002 14.0475 7.00002C13.8099 7.00002 13.5917 7.1015 13.3931 7.30448L10 10.7714L6.60694 7.30448C6.40831 7.1015 6.19014 7.00002 5.95246 7.00002C5.71477 7.00002 5.49661 7.1015 5.29797 7.30448C5.09932 7.50744 5 7.73035 5 7.97322C5 8.21608 5.09932 8.439 5.29797 8.64196Z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
